--- a/src/app/components/Footer.module.scss
+++ b/src/app/components/Footer.module.scss
@@ -1,7 +1,7 @@
 @import "../styles/common.scss";
 
 .borderTop {
-  width: 100%;
+  width: 100vw;
   height: 8vh;
   position: fixed;
   bottom: 0;
@@ -17,7 +17,7 @@
     border-top: 2px solid $black;
     border-bottom: 2px solid $black;
     .snsWrap {
-      margin-left: 10%;
+      margin-left: 10vw;
       a {
         margin: 0 1rem;
         img {
@@ -27,7 +27,7 @@
       }
     }
     p {
-      margin-right: 10%;
+      margin-right: 10vw;
       small {
         color: white;
         font-family: $font;
