--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -11,7 +11,7 @@ $subFont: "osaka", sans-serif;
 
 // color
 $black: #171717;
-$white: #fefefe;
+$white: #f7f7f7;
 $bgBlur: rgba(256, 256, 256, 0.5);
 $bgBlur2: rgba(23, 23, 23, 0.3);
 $shadowLine: #d9d9d9;
@@ -33,3 +33,36 @@ $gray: gray;
 // $ps: rgba(49, 168, 255, 0.8);
 // $xd: rgba(255, 97, 246, 0.8);
 // $figma: rgb(23, 23, 23, 0.8);
+
+// windowスタイル
+%windowWrap {
+  width: 88vw;
+  height: 88vh;
+  position: fixed;
+  top: 2vh;
+  left: 2vw;
+  border-top: 4px solid $white;
+  border-left: 4px solid $white;
+  border-bottom: 4px solid $shadowLine;
+  border-right: 4px solid $shadowLine;
+  background-color: $main;
+  padding: 0 0.8rem;
+  .bar {
+    width: 100%;
+    height: 5vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0 0 0.8rem;
+    h1 {
+      font-size: 2rem;
+      font-family: $font;
+      color: $white;
+    }
+  }
+  .pageArea {
+    width: 100%;
+    height: auto;
+    overflow: auto;
+  }
+}
