--- a/src/app/profile/Profile.module.scss
+++ b/src/app/profile/Profile.module.scss
@@ -7,81 +7,210 @@
   }
 }
 
-.profileTop {
-  width: 56vw;
-  aspect-ratio: 1.618 / 1;
+.profileTopWrap {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin: 4vh auto 0;
-  padding: 0 2vw;
-  background-color: rgba(256, 256, 256, 0.8);
-  box-shadow: 0px 0px 8px 0px rgba(23, 23, 23, 0.25);
-  border-radius: 2rem;
-  .imgWrap {
-    width: 18vw;
-    aspect-ratio: 3 / 4;
-    background: url(../../../public/img/me.png),
-      linear-gradient(180deg, $pink 0%, #8f8f8f 100%);
-    background-size: cover;
-    background-position: center;
-    border: 1px solid $black;
-  }
-  .textTop {
-    width: 30vw;
-    height: auto;
-    h2 {
-      font-size: $ll;
-      font-weight: lighter;
+  .profileLeft {
+    width: 60%;
+    aspect-ratio: 1.618 / 1;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    column-gap: 0.8rem;
+    margin: 7vh 2%;
+    background-color: rgba(256, 256, 256, 0.8);
+    box-shadow: 0px 0px 8px 0px rgba(23, 23, 23, 0.25);
+    border-radius: 2rem;
+    .imgWrap {
+      width: 30%;
+      aspect-ratio: 3 / 4;
+      background: url(../../../public/img/me.png),
+        linear-gradient(180deg, $pink 0%, #8f8f8f 100%);
+      background-size: cover;
+      background-position: center;
+      border: 1px solid $black;
     }
-    .name {
-      margin: 2rem 0 0 2rem;
-      font-size: $s;
-      font-weight: lighter;
-      span {
-        margin-left: 2rem;
-        font-size: $l;
-        font-family: $subFont;
+    .textTop {
+      width: 60%;
+      height: auto;
+      h2 {
+        font-size: $ll;
+        font-weight: lighter;
       }
-    }
-    .schoolWrap {
-      display: flex;
-      margin: 1rem 0 0 2rem;
-      p {
+      .name {
+        margin-top: 2rem;
         font-size: $s;
-      }
-      .school {
-        margin-left: 2rem;
-        font-size: $m;
-        font-family: $subFont;
+        font-weight: lighter;
         span {
-          margin-left: 0.4rem;
+          margin-left: 1.6rem;
+          font-size: $l;
+          font-family: $subFont;
+        }
+      }
+      .schoolWrap {
+        display: flex;
+        margin-top: 0.8rem;
+        p {
           font-size: $s;
+        }
+        .school {
+          margin-left: 1.6rem;
+          font-size: $m;
+          font-family: $subFont;
+          span {
+            font-size: $s;
+          }
+        }
+      }
+      .from {
+        margin-top: 0.8rem;
+        font-size: $s;
+        span {
+          margin-left: 1.6rem;
+          font-family: $subFont;
+          font-size: $m;
+        }
+      }
+      .birth {
+        margin-top: 0.8rem;
+        font-size: $s;
+        time {
+          margin-left: 1.6rem;
+          font-family: $subFont;
+          font-size: $m;
+        }
+      }
+      .graduation {
+        margin-top: 2.4rem;
+        font-size: $l;
+        color: $pink;
+      }
+    }
+  }
+  .profileRight {
+    width: 40%;
+    .skills {
+      padding: 6vh 2% 0;
+      h2 {
+        font-size: $ll;
+        font-weight: lighter;
+        margin-bottom: 2rem;
+      }
+      .programming,
+      .software {
+        h3 {
+          margin-bottom: 0.8rem;
+          font-size: $l;
+          font-weight: lighter;
+        }
+        .languageWrap {
+          display: flex;
+          flex-wrap: wrap;
+          p {
+            font-size: 2rem;
+            padding: 0.4rem 1.6rem;
+            margin: 0.4rem 0.4rem 0.4rem 0;
+            background-color: $bgBlur;
+            border: 2px solid $black;
+            border-radius: 1.6rem;
+          }
+        }
+      }
+      .software {
+        margin-top: 0.8rem;
+        h3 {
+          text-align: left;
+        }
+        .softWrap {
+          display: flex;
+          justify-content: center;
+          div {
+            width: 5rem;
+            height: 5rem;
+            margin-right: 1rem;
+            border: 2px solid $black;
+            border-radius: 4px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            p {
+              font-size: 3.2rem;
+              padding-left: 0.2rem;
+            }
+            img {
+              object-fit: cover;
+            }
+          }
         }
       }
     }
-    .from {
-      margin: 1rem 0 0 2rem;
-      font-size: $s;
-      span {
-        margin-left: 2rem;
-        font-family: $subFont;
-        font-size: $m;
-      }
-    }
-    .birth {
-      margin: 1rem 0 0 2rem;
-      font-size: $s;
-      time {
-        margin-left: 2rem;
-        font-family: $subFont;
-        font-size: $m;
-      }
-    }
-    .graduation {
-      margin: 2rem 0 0 2rem;
+    .jobType {
+      font-family: $subFont;
       font-size: $l;
-      color: $pink;
+      text-align: center;
+      display: inline-block;
+      padding: 8vh 16%;
+      margin: 6vh 0;
+      border: 2px solid $black;
+      border-radius: 2.4rem;
     }
   }
 }
+
+.about {
+  margin-top: 4vh;
+  text-align: center;
+  h2 {
+    font-size: $xl;
+    font-weight: lighter;
+  }
+}
+
+// .myFav {
+//   width: 100%;
+//   h2 {
+//     text-align: center;
+//     font-size: $xl;
+//     font-weight: lighter;
+//   }
+//   .childWrap {
+//     width: inherit;
+//     display: flex;
+//     justify-content: space-evenly;
+//     flex-wrap: wrap;
+//     // margin-top: 5rem;
+//     .favChild {
+//       width: 40vw;
+//       display: flex;
+//       // margin-bottom: 2rem;
+//       img {
+//         width: 6rem;
+//         height: 6rem;
+//         object-fit: cover;
+//       }
+//       p {
+//         // margin-left: 2rem;
+//         font-size: $l;
+//         span {
+//           font-family: $subFont;
+//           margin-left: 0.8rem;
+//           font-size: $s;
+//         }
+//       }
+//     }
+//   }
+// }
+
+// .certification {
+//   padding: 1.6rem 0 3.2em;
+//   font-family: $subFont;
+//   text-align: center;
+//   p {
+//     &:nth-child(1) {
+//       font-size: $m;
+//     }
+//     &:nth-child(2) {
+//       font-size: $s;
+//     }
+//   }
+// }
