--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -3,6 +3,7 @@ $s: clamp(0.6rem, -0.11rem + 2.67vw, 1.6rem);
 $m: clamp(1rem, 0.29rem + 2.67vw, 2rem);
 $l: clamp(1.4rem, 0.69rem + 2.67vw, 2.4rem);
 $ll: clamp(3rem, 2.29rem + 2.67vw, 4rem);
+$xl: clamp(3.8rem, 3.09rem + 2.67vw, 4.8rem);
 
 // color
 $black: #171717;
@@ -64,11 +65,14 @@ $subFont: "osaka", sans-serif;
       font-size: $m;
       font-family: $font;
       color: $white;
+      span {
+        font-size: $s;
+      }
     }
   }
   .pageArea {
     width: 100%;
     height: 80.5vh;
-    overflow: auto;
+    overflow: scroll;
   }
 }
