--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -1,4 +1,5 @@
 // font-size
+$ss: clamp(0.2rem, -0.51rem + 2.67vw, 1.2rem);
 $s: clamp(0.6rem, -0.11rem + 2.67vw, 1.6rem);
 $m: clamp(1rem, 0.29rem + 2.67vw, 2rem);
 $l: clamp(1.4rem, 0.69rem + 2.67vw, 2.4rem);
