--- a/src/app/profile/Profile.module.scss
+++ b/src/app/profile/Profile.module.scss
@@ -4,6 +4,7 @@
   @extend %windowWrap;
   .pageArea {
     background: url("../../../public/img/bg-line.svg") repeat $sub;
+    padding-bottom: 8vh;
   }
 }
 
@@ -159,47 +160,127 @@
 
 .about {
   margin-top: 4vh;
-  text-align: center;
   h2 {
+    text-align: center;
     font-size: $xl;
     font-weight: lighter;
   }
+  .firstText {
+    width: 85%;
+    font-size: $s;
+    font-family: $subFont;
+    text-align: left;
+    margin: 1.6rem auto 2.4rem;
+  }
+  .detailWrap {
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+    margin: 0 auto;
+    .detailChild {
+      width: 45%;
+      text-align: left;
+      h3 {
+        font-size: $l;
+        font-weight: lighter;
+        margin-bottom: 0.8rem;
+      }
+      p {
+        font-size: $s;
+        line-height: 1.6;
+        font-family: $subFont;
+      }
+    }
+  }
+  .strongWrap {
+    width: 85%;
+    margin: 5.6rem auto 0;
+    h3 {
+      font-size: $m;
+      font-weight: lighter;
+      margin-bottom: 0.8rem;
+    }
+    p {
+      font-size: $s;
+      line-height: 1.6;
+      font-family: $subFont;
+    }
+  }
+  .awardWrap {
+    width: 85%;
+    margin: 5.6rem auto 0;
+    h3 {
+      font-size: $m;
+      font-weight: lighter;
+      margin-bottom: 0.8rem;
+      span {
+        font-size: $ss;
+        font-family: $subFont;
+        margin-left: 0.8rem;
+      }
+    }
+    li {
+      font-size: $s;
+      font-family: $subFont;
+      text-decoration: underline;
+      text-decoration-thickness: 2px;
+      text-decoration-color: $black;
+      text-underline-offset: 4px;
+      padding-bottom: 0.8rem;
+    }
+  }
+  .internWrap {
+    width: 85%;
+    margin: 5.6rem auto 0;
+    h3 {
+      font-size: $m;
+      font-weight: lighter;
+      margin-bottom: 0.8rem;
+    }
+    p {
+      font-size: $s;
+      line-height: 1.6;
+      font-family: $subFont;
+    }
+  }
 }
 
-// .myFav {
-//   width: 100%;
-//   h2 {
-//     text-align: center;
-//     font-size: $xl;
-//     font-weight: lighter;
-//   }
-//   .childWrap {
-//     width: inherit;
-//     display: flex;
-//     justify-content: space-evenly;
-//     flex-wrap: wrap;
-//     // margin-top: 5rem;
-//     .favChild {
-//       width: 40vw;
-//       display: flex;
-//       // margin-bottom: 2rem;
-//       img {
-//         width: 6rem;
-//         height: 6rem;
-//         object-fit: cover;
-//       }
-//       p {
-//         // margin-left: 2rem;
-//         font-size: $l;
-//         span {
-//           font-family: $subFont;
-//           margin-left: 0.8rem;
-//           font-size: $s;
-//         }
-//       }
-//     }
-//   }
-// }
+.myFav {
+  width: 100%;
+  margin-top: 12vh;
+  h2 {
+    text-align: center;
+    font-size: $xl;
+    font-weight: lighter;
+    margin: 1.6rem auto 2.4rem;
+  }
+  .childWrap {
+    width: inherit;
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    row-gap: 2.4rem;
+    .favChild {
+      width: 40%;
+      display: flex;
+      align-items: center;
+      column-gap: 2.4rem;
+      // border: 1px solid tomato;
+      img {
+        width: 7.2rem;
+        height: 7.2rem;
+        object-fit: cover;
+      }
+      p {
+        font-size: $l;
+        span {
+          font-family: $subFont;
+          font-size: $s;
+        }
+      }
+    }
+  }
+}
 
 // .certification {
 //   padding: 1.6rem 0 3.2em;
