--- a/src/app/works/Works.module.scss
+++ b/src/app/works/Works.module.scss
@@ -4,6 +4,8 @@
   @extend %windowWrap;
   .pageArea {
     background: url(../../../public/img/bg-line.svg) repeat, $white;
+    display: flex;
+    flex-wrap: wrap;
   }
 }
 
@@ -15,18 +17,92 @@
   flex-direction: column;
   background-color: $sub;
   img {
-    width: 10rem;
+    width: 8rem;
     height: auto;
+    padding: 2vh 0;
     // border: 1px solid tomato;
   }
   .nav {
     width: 100%;
     display: flex;
+    background-color: $worksNav;
+    border-top: 1px solid $gray;
+    border-bottom: 1px solid $gray;
     li {
       width: calc(100% / 5);
+      padding: 2vh 0;
       display: flex;
       justify-content: center;
       align-items: center;
+      font-size: $s;
+      &:hover {
+        background: $bgBlur;
+      }
+    }
+  }
+}
+
+.workWrap {
+  width: calc(100% / 3);
+  height: auto;
+  padding: 4vh 2%;
+  border: 1px solid $black;
+  .workImg {
+    width: 100%;
+    object-fit: cover;
+    border: 2px solid $black;
+    background-color: $white;
+    position: relative;
+  }
+  // .awardImg {
+  //   position: absolute;
+  //   top: 0;
+  //   right: 0;
+  //   transform: translate(50%, -50%);
+  // }
+  h2 {
+    margin: 0.8rem 0;
+    font-size: $m;
+    font-family: $font;
+  }
+  .explain {
+    height: 8vh;
+    font-size: $ss;
+    font-family: $subFont;
+    margin-bottom: 0.8rem;
+  }
+  .btnWrap {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 0.8rem;
+    font-size: $s;
+    font-family: $subFont;
+    .workDate {
+      width: 25%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0.8rem 0;
+      background-color: $white;
+      border: 2px solid $black;
+      border-radius: 6px;
+    }
+    a {
+      width: 75%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 0.8rem 0;
+      border: 2px solid $black;
+      background-color: $main;
+      color: $white;
+      border-radius: 6px;
+      &:hover {
+        background-color: $pink;
+      }
     }
   }
 }
