--- a/src/app/components/Footer.module.scss
+++ b/src/app/components/Footer.module.scss
@@ -21,8 +21,9 @@
       a {
         margin: 0 1rem;
         img {
-          width: 3.2rem;
-          height: 3.2rem;
+          width: 4rem;
+          height: 4rem;
+          object-fit: cover;
         }
       }
     }
