--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -16,7 +16,7 @@ $main: #62639c;
 $sub: #abbae5;
 $mint: #c2efdb;
 $pink: #f36daf;
-$gray: gray;
+$gray: #808080;
 // $prizeBg: rgb(243, 109, 175, 0.3);
 $worksBg: rgb(171, 186, 229, 0.3);
 $worksNav: rgb(171, 186, 229, 0.5);
