--- a/src/app/profile/Profile.module.scss
+++ b/src/app/profile/Profile.module.scss
@@ -139,6 +139,8 @@
               padding-left: 0.2rem;
             }
             img {
+              width: inherit;
+              height: inherit;
               object-fit: cover;
             }
           }
