--- a/src/app/components/Nav.module.scss
+++ b/src/app/components/Nav.module.scss
@@ -13,6 +13,7 @@
 
   .navChild {
     width: 6.4rem;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -31,8 +32,8 @@
       margin: 0;
     }
     &:hover {
-      cursor: pointer;
       img {
+        cursor: url("/img/cursor_click.png"), pointer;
         background-color: $bgBlur;
         border-radius: 4px;
         outline: 2px solid $shadowLine;
