--- a/src/app/works/Works.module.scss
+++ b/src/app/works/Works.module.scss
@@ -37,6 +37,7 @@
       font-size: $s;
       &:hover {
         background: $bgBlur;
+        cursor: url("/img/cursor_click.png"), pointer;
       }
     }
   }
@@ -102,6 +103,7 @@
       border-radius: 6px;
       &:hover {
         background-color: $pink;
+        cursor: url("/img/cursor_click.png"), pointer;
       }
     }
   }
