--- a/src/app/works/Works.module.scss
+++ b/src/app/works/Works.module.scss
@@ -3,51 +3,43 @@
 .windowWrap {
   @extend %windowWrap;
   .pageArea {
-    background: url(../../../public/img/bg-line.svg) repeat, $white;
-    display: flex;
-    flex-wrap: wrap;
+    background: url(/img/bg-line.svg) repeat, $white;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    grid-template-rows: 14vh calc(80.5vh - 14vh);
   }
 }
 
 .header {
   width: 100%;
+  height: auto;
+  grid-column: 1 / 3;
+  grid-row: 1 / 2;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
   background-color: $sub;
+  border-bottom: 2px solid $black;
   img {
     width: 15%;
     height: 12vh;
     object-fit: cover;
     margin: 2vh 0;
   }
-  .nav {
-    width: 100%;
-    display: flex;
-    background-color: $worksNav;
-    border-top: 1px solid $gray;
-    border-bottom: 1px solid $gray;
-    li {
-      width: calc(100% / 5);
-      padding: 2vh 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: $s;
-      &:hover {
-        background: $bgBlur;
-        cursor: url("/img/cursor_click.png"), pointer;
-      }
-    }
-  }
 }
 
+.worksArea {
+  width: 100%;
+  overflow: auto;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
+  display: flex;
+  flex-wrap: wrap;
+}
 .workWrap {
   width: calc(100% / 3);
   height: auto;
   padding: 4vh 2%;
-  border: 1px solid $black;
   .workImg {
     width: 100%;
     object-fit: cover;
