--- a/src/app/works/Works.module.scss
+++ b/src/app/works/Works.module.scss
@@ -6,13 +6,13 @@
     background: url(/img/bg-line.svg) repeat, $white;
     display: grid;
     grid-template-columns: 15% 85%;
-    grid-template-rows: 14vh calc(80.5vh - 14vh);
+    grid-template-rows: 12vh calc(80.5vh - 12vh);
   }
 }
 
 .header {
   width: 100%;
-  height: auto;
+  height: 12vh;
   grid-column: 1 / 3;
   grid-row: 1 / 2;
   display: flex;
@@ -21,8 +21,8 @@
   background-color: $sub;
   border-bottom: 2px solid $black;
   img {
-    width: 15%;
-    height: 12vh;
+    width: 12%;
+    height: auto;
     object-fit: cover;
     margin: 2vh 0;
   }
@@ -42,6 +42,8 @@
   padding: 4vh 2%;
   .workImg {
     width: 100%;
+    height: auto;
+    aspect-ratio: 1.4141/1;
     object-fit: cover;
     border: 2px solid $black;
     background-color: $white;
@@ -59,7 +61,7 @@
     font-family: $font;
   }
   .explain {
-    height: 8vh;
+    height: 6vh;
     font-size: $ss;
     font-family: $subFont;
     margin-bottom: 0.8rem;
