--- a/src/app/styles/common.scss
+++ b/src/app/styles/common.scss
@@ -20,16 +20,16 @@ $gray: #808080;
 // $prizeBg: rgb(243, 109, 175, 0.3);
 $worksBg: rgb(171, 186, 229, 0.3);
 $worksNav: rgb(171, 186, 229, 0.5);
-// $html: rgba(255, 99, 71, 0.3);
-// $css: rgba(0, 191, 255, 0.3);
-// $scss: rgba(211, 0, 179, 0.3);
-// $js: rgba(255, 215, 0, 0.3);
-// $firebase: rgb(255, 215, 0, 0.3);
-// $nextJs: rgb(97, 218, 251, 0.3);
-// $ai: rgba(255, 154, 1, 0.8);
-// $ps: rgba(49, 168, 255, 0.8);
-// $xd: rgba(255, 97, 246, 0.8);
-// $figma: rgb(23, 23, 23, 0.8);
+$html: rgba(255, 99, 71, 0.3);
+$css: rgba(0, 191, 255, 0.3);
+$scss: rgba(211, 0, 179, 0.3);
+$js: rgba(255, 215, 0, 0.3);
+$firebase: rgb(255, 215, 0, 0.3);
+$nextJs: rgb(97, 218, 251, 0.3);
+$ai: rgba(255, 154, 1, 0.8);
+$ps: rgba(49, 168, 255, 0.8);
+$xd: rgba(255, 97, 246, 0.8);
+$figma: rgb(23, 23, 23, 0.8);
 
 // font-family
 @font-face {
