--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -36,3 +36,146 @@
   display: flex;
   flex-wrap: wrap;
 }
+
+.sliderWrap {
+  width: 50%;
+  padding-top: 4%;
+  .pdfLink {
+    margin: 18% 0 0 10%;
+    font-size: 1.2rem;
+    a {
+      color: $black;
+      span {
+        font-weight: bold;
+      }
+      &:before {
+        content: "";
+        width: 1.6rem;
+        aspect-ratio: 1;
+        display: inline-block;
+        vertical-align: text-top;
+        background-image: url(/img/link.svg);
+        background-size: cover;
+        background-position: center;
+        margin-right: 0.2rem;
+      }
+    }
+    &:hover {
+      a {
+        color: $pink;
+        &:before {
+          background-image: url(/img/link-hover.svg);
+        }
+      }
+    }
+  }
+  .pageExplain {
+    margin: 2% 0 0 12%;
+    p {
+      font-size: 1rem;
+    }
+  }
+}
+
+.data {
+  width: 50%;
+  padding: 4% 2% 0 2%;
+  // border: 1px solid tomato;
+  .dataTop {
+    display: flex;
+    align-items: end;
+    column-gap: 0.4rem;
+    .prize {
+      background-color: $white;
+      border: 1px solid $pink;
+      border-radius: 3px;
+      font-size: 1.2rem;
+      padding: 0 0.4rem;
+    }
+    :not(.prize) {
+      font-size: 1.2rem;
+    }
+  }
+  h3 {
+    margin: 1rem 0 0.2rem 0.6rem;
+    font-family: $font;
+    font-size: 2.8rem;
+    span {
+      margin-left: 0.6rem;
+      font-size: 1.6rem;
+    }
+  }
+  .date {
+    margin: 0rem 0 0 0.4rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.6rem;
+    font-family: $subFont;
+    font-weight: bold;
+  }
+  .mainExplain {
+    margin: 0.8rem 0 0 0.4rem;
+    font-size: 1.3rem;
+    // font-weight: bold;
+    span {
+      border-bottom: 1px solid $black;
+    }
+  }
+  .usedWrap {
+    display: flex;
+    margin: 0.6rem 0 0 0.4rem;
+    .usedApp {
+      width: 3.2rem;
+      height: 3.2rem;
+      margin-right: 0.6rem;
+      border-radius: 3px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $white;
+      p {
+        font-family: $font;
+        font-size: 2.4rem;
+        padding-left: 0.2rem;
+      }
+    }
+    .usedApp:nth-child(1) {
+      border: 1px solid $ps;
+    }
+    .usedApp:nth-child(2) {
+      border: 1px solid $ai;
+    }
+  }
+  .btnWrap {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    margin: 2.4rem 0;
+    .term {
+      width: 20%;
+      font-size: 1.4rem;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border: 2px solid $black;
+      border-radius: 4px;
+      background-color: $white;
+    }
+    .siteBtn {
+      width: 78%;
+      border: 2px solid $black;
+      border-radius: 4px;
+      text-align: center;
+      background-color: $pink;
+      padding: 1rem 0;
+      display: block;
+      text-decoration: none;
+      color: $white;
+      font-size: 1.4rem;
+      font-family: $font;
+    }
+  }
+  .subExplain {
+    font-size: 1rem;
+  }
+}
