--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -53,41 +53,25 @@
 .data {
   width: 40%;
   padding: 4% 2% 0 2%;
-  // border: 1px solid tomato;
-  .dataTop {
-    display: flex;
-    align-items: end;
-    column-gap: 0.4rem;
-    .prize {
-      background-color: $white;
-      border: 1px solid $pink;
-      border-radius: 3px;
-      font-size: 1.2rem;
-      padding: 0 0.4rem;
-    }
-    :not(.prize) {
-      font-size: 1.2rem;
-    }
-  }
   h3 {
     margin: 1rem 0 0.2rem 0.6rem;
     font-family: $font;
-    font-size: 2.8rem;
+    font-size: $l;
     span {
       margin-left: 0.6rem;
-      font-size: 1.6rem;
+      font-size: $s;
     }
   }
   .date {
     margin: 0rem 0 0 0.4rem;
     display: flex;
     align-items: center;
-    font-size: 1.6rem;
+    font-size: $s;
     font-weight: bold;
   }
   .mainExplain {
     margin: 0.8rem 0 0 0.4rem;
-    font-size: 1.3rem;
+    font-size: $ss;
     // font-weight: bold;
     span {
       border-bottom: 1px solid $black;
@@ -95,7 +79,7 @@
   }
   .usedWrap {
     display: flex;
-    margin: 0.6rem 0 0 0.4rem;
+    margin: 0.8rem 0 0 0.4rem;
     column-gap: 0.6rem;
     .usedApp {
       width: 3.2rem;
@@ -108,7 +92,7 @@
       border: 1px solid transparent;
       p {
         font-family: $font;
-        font-size: 2.4rem;
+        font-size: $l;
         padding-left: 0.2rem;
       }
     }
@@ -152,7 +136,7 @@
     margin: 2.4rem 0;
     .term {
       width: 20%;
-      font-size: 1.4rem;
+      font-size: $s;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -163,17 +147,17 @@
     .siteBtn {
       width: 78%;
       border: 2px solid $black;
+      background-color: $main;
       border-radius: 4px;
       text-align: center;
-      background-color: $pink;
       padding: 1rem 0;
       display: block;
       text-decoration: none;
       color: $white;
-      font-size: 1.4rem;
+      font-size: $s;
+      &:hover {
+        background-color: $pink;
+      }
     }
-  }
-  .subExplain {
-    font-size: 1rem;
   }
 }
