--- a/src/app/profile/Profile.module.scss
+++ b/src/app/profile/Profile.module.scss
@@ -10,6 +10,7 @@
 
 .profileTopWrap {
   width: 100%;
+  height: 80vh;
   display: flex;
   .profileLeft {
     width: 60%;
@@ -90,8 +91,8 @@
   }
   .profileRight {
     width: 40%;
+    padding: 6vh 2vw 4vh;
     .skills {
-      padding: 6vh 2% 0;
       h2 {
         font-size: $ll;
         font-weight: lighter;
@@ -130,7 +131,6 @@
           div {
             width: 5rem;
             height: 5rem;
-            margin-right: 1rem;
             border: 2px solid $black;
             border-radius: 4px;
             display: flex;
@@ -150,14 +150,23 @@
       }
     }
     .jobType {
+      width: 100%;
       font-family: $subFont;
-      font-size: $l;
-      text-align: center;
-      display: inline-block;
-      padding: 8vh 16%;
-      margin: 6vh 0;
+      margin-top: 2.4rem;
+      padding: 2vh 2vw;
       border: 2px solid $black;
-      border-radius: 2.4rem;
+      border-radius: 1.6rem;
+      display: flex;
+      justify-content: space-between;
+      align-self: center;
+      p {
+        font-size: $l;
+      }
+      ul {
+        li {
+          font-size: $m;
+        }
+      }
     }
   }
 }
