--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -1,13 +1,13 @@
-@import "../../styles/common.scss";
+@use "../../styles/common";
 
 .windowWrap {
   @extend %windowWrap;
   .pageArea {
-    background: url(/img/bg-line.svg) repeat, $white;
+    background: url(/img/bg-line.svg) repeat, common.$white;
     display: grid;
     grid-template-columns: 15% 85%;
     grid-template-rows: 12vh calc(80.5vh - 12vh);
-    font-family: $subFont;
+    font-family: common.$subFont;
   }
 }
 
@@ -19,8 +19,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: $sub;
-  border-bottom: 2px solid $black;
+  background-color: common.$sub;
+  border-bottom: 2px solid common.$black;
   a {
     width: 12%;
     height: auto;
@@ -55,26 +55,26 @@
   padding: 4% 2% 0 2%;
   h3 {
     margin: 1rem 0 0.2rem 0.6rem;
-    font-family: $font;
-    font-size: $l;
+    font-family: common.$font;
+    font-size: common.$l;
     span {
       margin-left: 0.6rem;
-      font-size: $s;
+      font-size: common.$s;
     }
   }
   .date {
     margin: 0rem 0 0 0.4rem;
     display: flex;
     align-items: center;
-    font-size: $s;
+    font-size: common.$s;
     font-weight: bold;
   }
   .mainExplain {
     margin: 0.8rem 0 0 0.4rem;
-    font-size: $ss;
+    font-size: common.$ss;
     // font-weight: bold;
     span {
-      border-bottom: 1px solid $black;
+      border-bottom: 1px solid common.$black;
     }
   }
   .usedWrap {
@@ -88,11 +88,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: $white;
+      background-color: common.$white;
       border: 1px solid transparent;
       p {
-        font-family: $font;
-        font-size: $l;
+        font-family: common.$font;
+        font-size: common.$l;
         padding-left: 0.2rem;
       }
     }
@@ -136,27 +136,27 @@
     margin: 2.4rem 0;
     .term {
       width: 20%;
-      font-size: $s;
+      font-size: common.$s;
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 2px solid $black;
+      border: 2px solid common.$black;
       border-radius: 4px;
-      background-color: $white;
+      background-color: common.$white;
     }
     .siteBtn {
       width: 78%;
-      border: 2px solid $black;
-      background-color: $main;
+      border: 2px solid common.$black;
+      background-color: common.$main;
       border-radius: 4px;
       text-align: center;
       padding: 1rem 0;
       display: block;
       text-decoration: none;
-      color: $white;
-      font-size: $s;
+      color: common.$white;
+      font-size: common.$s;
       &:hover {
-        background-color: $pink;
+        background-color: common.$pink;
       }
     }
   }
