--- a/src/app/profile/Profile.module.scss
+++ b/src/app/profile/Profile.module.scss
@@ -125,7 +125,7 @@
         }
         .softWrap {
           display: flex;
-          justify-content: start;
+          justify-content: flex-start;
           flex-wrap: wrap;
           gap: 0.4rem;
           div {
@@ -406,7 +406,7 @@
             text-align: left;
           }
           .softWrap {
-            justify-content: start;
+            justify-content: flex-start;
           }
         }
       }
