--- a/src/app/works/Works.module.scss
+++ b/src/app/works/Works.module.scss
@@ -1,9 +1,9 @@
-@use "../styles/common";
+@use "../styles/common" as *;
 
 .windowWrap {
   @extend %windowWrap;
   .pageArea {
-    background: url(/img/bg-line.svg) repeat, common.$white;
+    background: url(/img/bg-line.svg) repeat, $white;
     display: grid;
     grid-template-columns: 15% 85%;
     grid-template-rows: 12vh calc(80.5vh - 12vh);
@@ -18,8 +18,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: common.$sub;
-  border-bottom: 2px solid common.$black;
+  background-color: $sub;
+  border-bottom: 2px solid $black;
   a {
     width: 12%;
     height: auto;
@@ -43,37 +43,49 @@
   grid-row: 2 / 3;
   display: flex;
   flex-wrap: wrap;
+  align-items: stretch;
 }
 
 .workWrap {
   width: calc(100% / 3);
   height: auto;
   padding: 4vh 2%;
+  .workItem {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    min-height: 100%;
+  }
   .workImg {
     width: 100%;
     height: auto;
     aspect-ratio: 1.4141/1;
     object-fit: cover;
-    border: 2px solid common.$black;
-    background-color: common.$white;
+    border: 2px solid $black;
+    background-color: $white;
     position: relative;
   }
-  // .awardImg {
-  //   position: absolute;
-  //   top: 0;
-  //   right: 0;
-  //   transform: translate(50%, -50%);
-  // }
   h2 {
-    margin: 0.8rem 0;
-    font-size: common.$m;
-    font-family: common.$font;
+    margin: 0.8rem 0 0;
+    font-size: $m;
+    font-family: $font;
   }
-  .explain {
-    height: 6vh;
-    font-size: common.$ss;
-    font-family: common.$subFont;
-    margin-bottom: 1.6rem;
+  .catchCopy {
+    font-size: $ss;
+    font-family: $subFont;
+    font-weight: bolder;
+  }
+  .tagWrap {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 0.8rem;
+    margin: 1.6rem 0 0.4rem;
+    // border: 1px solid tomato;
+    li {
+      color: $gray;
+      font-family: $subFont;
+      font-size: $ss;
+    }
   }
   .btnWrap {
     width: 100%;
@@ -82,16 +94,16 @@
     align-items: center;
     justify-content: space-between;
     column-gap: 0.8rem;
-    font-size: common.$s;
-    font-family: common.$subFont;
+    font-size: $s;
+    font-family: $subFont;
     .workDate {
       width: 25%;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 0.8rem 0;
-      background-color: common.$white;
-      border: 2px solid common.$black;
+      background-color: $white;
+      border: 2px solid $black;
       border-radius: 6px;
     }
     a {
@@ -100,12 +112,12 @@
       justify-content: center;
       align-items: center;
       padding: 0.8rem 0;
-      border: 2px solid common.$black;
-      background-color: common.$main;
-      color: common.$white;
+      border: 2px solid $black;
+      background-color: $main;
+      color: $white;
       border-radius: 6px;
       &:hover {
-        background-color: common.$pink;
+        background-color: $pink;
         cursor: url("/img/cursor_click.png"), pointer;
       }
     }
