--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -1,13 +1,13 @@
-@use "../../styles/common";
+@use "../../styles/common" as *;
 
 .windowWrap {
   @extend %windowWrap;
   .pageArea {
-    background: url(/img/bg-line.svg) repeat, common.$white;
+    background: url(/img/bg-line.svg) repeat, $white;
     display: grid;
     grid-template-columns: 15% 85%;
     grid-template-rows: 12vh calc(80.5vh - 12vh);
-    font-family: common.$subFont;
+    font-family: $subFont;
   }
 }
 
@@ -19,8 +19,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: common.$sub;
-  border-bottom: 2px solid common.$black;
+  background-color: $sub;
+  border-bottom: 2px solid $black;
   a {
     width: 12%;
     height: auto;
@@ -52,30 +52,30 @@
 
 .data {
   width: 45%;
-  padding: 4% 2% 0 2%;
+  padding: 2% 2% 0 2%;
   h3 {
-    margin: 1rem 0 0.2rem 0.6rem;
-    font-family: common.$font;
-    font-size: common.$l;
-    span {
-      margin-left: 0.6rem;
-      font-size: common.$s;
-    }
+    margin: 1rem 0 0 0.6rem;
+    font-family: $font;
+    font-size: $l;
+  }
+  .catchCopy {
+    margin: 0 0 1.6rem 0.4rem;
+    font-size: $s;
   }
   .date {
     margin: 0rem 0 0 0.4rem;
     display: flex;
     align-items: center;
-    font-size: common.$s;
+    font-size: $s;
     font-weight: bold;
   }
-  .mainExplain {
-    margin: 0.8rem 0 0 0.4rem;
-    font-size: common.$ss;
-    // font-weight: bold;
-    span {
-      border-bottom: 1px solid common.$black;
-    }
+  .tagList {
+    margin: 0rem 0 0 0.4rem;
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 0.8rem;
+    font-size: $ss;
+    color: $gray;
   }
   .usedWrap {
     display: flex;
@@ -88,11 +88,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: common.$white;
+      background-color: $white;
       border: 1px solid transparent;
       p {
-        font-family: common.$font;
-        font-size: common.$l;
+        font-family: $font;
+        font-size: $l;
         padding-left: 0.2rem;
       }
     }
@@ -103,7 +103,7 @@
     .css {
       background-color: rgba(0, 191, 255, 0.3);
     }
-    .scss {
+    .sass {
       background-color: rgba(211, 0, 179, 0.3);
     }
     .js {
@@ -113,6 +113,9 @@
       background-color: rgba(255, 215, 0, 0.3);
     }
     .nextJs {
+      background-color: rgba(97, 218, 251, 0.3);
+    }
+    .react {
       background-color: rgba(97, 218, 251, 0.3);
     }
     // デザイン用
@@ -133,31 +136,73 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
-    margin: 2.4rem 0;
+    margin: 2.4rem 0 0;
     .term {
       width: 20%;
-      font-size: common.$s;
+      font-size: $s;
       display: flex;
       align-items: center;
       justify-content: center;
-      border: 2px solid common.$black;
+      border: 2px solid $black;
       border-radius: 4px;
-      background-color: common.$white;
+      background-color: $white;
     }
     .siteBtn {
       width: 78%;
-      border: 2px solid common.$black;
-      background-color: common.$main;
+      border: 2px solid $black;
+      background-color: $main;
       border-radius: 4px;
       text-align: center;
       padding: 1rem 0;
       display: block;
       text-decoration: none;
-      color: common.$white;
-      font-size: common.$s;
+      color: $white;
+      font-size: $s;
       &:hover {
-        background-color: common.$pink;
+        background-color: $pink;
       }
+    }
+  }
+  .githubBtn {
+    display: flex;
+    align-items: center;
+    font-size: $ss;
+    text-decoration: underline;
+    margin: 0.4rem 0;
+    &::before {
+      content: "";
+      display: block;
+      width: 1.6rem;
+      height: 1.6rem;
+      background: url("/img/github_worksDetail.svg");
+      background-size: cover;
+      background-position: center;
+      margin-right: 0.2rem;
+    }
+    span {
+      font-weight: bold;
+    }
+    // ホバーした時に色をピンクに変更
+    &:hover {
+      &::before {
+        background: url("/img/github_worksDetail_hover.svg");
+        background-size: cover;
+        background-position: center;
+      }
+      cursor: url("/img/cursor_click.png"), pointer;
+      color: $pink;
+    }
+  }
+  .summaryWrap {
+    margin-top: 3.2rem;
+    border-top: 1px solid $black;
+    h4 {
+      padding: 1.6rem 0 0rem;
+      font-size: $s;
+    }
+    p {
+      padding: 0 0 1.6rem;
+      font-size: $ss;
     }
   }
 }
