モニターでもスタイルが崩れないように変更

--- a/src/app/profile/Profile.module.scss
+++ b/src/app/profile/Profile.module.scss
@@ -91,7 +91,11 @@
   }
   .profileRight {
     width: 40%;
-    padding: 6vh 2vw 0;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 2vw;
     .skills {
       h2 {
         font-size: $ll;
