worksデータ追加中

--- a/src/app/works/Works.module.scss
+++ b/src/app/works/Works.module.scss
@@ -20,6 +20,7 @@
   align-items: center;
   background-color: $sub;
   border-bottom: 2px solid $black;
+  overflow: hidden;
   a {
     width: 12%;
     height: auto;
