--- a/src/app/components/Msg.module.scss
+++ b/src/app/components/Msg.module.scss
@@ -28,6 +28,37 @@
         font-size: $s;
       }
     }
+    .closeBtn {
+      width: 1.6vw;
+      min-width: 2.4rem;
+      height: auto;
+      aspect-ratio: 1/1;
+      border-top: 1px solid $white;
+      border-left: 1px solid $white;
+      border-right: 1px solid $black;
+      border-bottom: 1px solid $black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: $shadowLine;
+      &:hover {
+        cursor: url("/img/cursor_click.png"), pointer;
+      }
+      img {
+        width: 50%;
+        height: auto;
+        object-fit: cover;
+      }
+    }
+
+    // クリックしたとき
+    .closeBtn:active {
+      background-color: $gray;
+      border-top: 1px solid $black;
+      border-left: 1px solid $black;
+      border-right: none;
+      border-bottom: none;
+    }
   }
   .pageArea {
     width: 100%;
@@ -41,12 +72,6 @@
     p {
       font-size: $m;
       color: $black;
-    }
-    span {
-      font-size: $s;
-      font-weight: bold;
-      padding: 1.2rem 0 0;
-      color: $pink;
     }
   }
 }
