--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -44,14 +44,27 @@
   grid-row: 2 / 3;
   display: flex;
   flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 55% 45%;
+  grid-template-rows: 100%;
+  position: relative;
 }
 
 .sliderWrap {
-  width: 55%;
+  width: 100%;
+  height: auto;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  position: sticky;
+  top: 0;
 }
 
 .data {
-  width: 45%;
+  width: 100%;
+  max-height: 80vh;
+  overflow-y: auto;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
   padding: 2% 2% 0 2%;
   h3 {
     margin: 1rem 0 0 0.6rem;
