herstel画像追加画像劣化改善

--- a/src/app/components/WorksNav.module.scss
+++ b/src/app/components/WorksNav.module.scss
@@ -3,6 +3,7 @@
 .navWrap {
   width: 100%;
   height: calc(80.5vh - 12vh);
+  overflow-y: auto;
   grid-column: 1 / 2;
   grid-row: 2 / 3;
   border-right: 2px solid common.$black;
