--- a/src/app/components/WorksSlider.module.scss
+++ b/src/app/components/WorksSlider.module.scss
@@ -5,8 +5,10 @@
   height: auto;
   aspect-ratio: 297 / 210;
   img {
-    width: 100%;
-    height: 100%;
+    width: -100%;
+    height: -100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover;
   }
 }
