作品のデータ追加中

--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -173,6 +173,7 @@
       font-size: $s;
       &:hover {
         background-color: $pink;
+        cursor: url("/img/cursor_click.png"), pointer;
       }
     }
   }
