--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -160,6 +160,18 @@
       border-radius: 4px;
       background-color: $white;
     }
+    .graphicBtn {
+      width: 78%;
+      border: 2px solid $black;
+      background-color: $pink;
+      border-radius: 4px;
+      text-align: center;
+      padding: 1rem 0;
+      display: block;
+      text-decoration: none;
+      color: $white;
+      font-size: $s;
+    }
     .siteBtn {
       width: 78%;
       border: 2px solid $black;
