--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -37,6 +37,36 @@
   }
 }
 
+.backBtnWrap {
+  width: 100%;
+  overflow: hidden;
+  grid-column: 1 / 2;
+  grid-row: 2 / 3;
+  border-right: 2px solid $black;
+  .backBtn {
+    padding: 0.8rem 0;
+    display: flex;
+    align-items: center;
+    font-size: $s;
+    font-weight: bold;
+    font-family: $font;
+    &::before {
+      content: "";
+      display: block;
+      width: 2.8rem;
+      height: 2.8rem;
+      background: url("/img/back_works.svg");
+    }
+    &:hover {
+      color: $gray;
+      cursor: url("/img/cursor_click.png"), pointer;
+      &::before {
+        background: url("/img/back_works_hover.svg");
+      }
+    }
+  }
+}
+
 .worksArea {
   width: 100%;
   overflow: auto;
