一覧に戻るボタン、アイコンを変更

--- a/src/app/works/[id]/WorksDetails.module.scss
+++ b/src/app/works/[id]/WorksDetails.module.scss
@@ -58,7 +58,7 @@
       background: url("/img/back_works.svg");
     }
     &:hover {
-      color: $gray;
+      color: $pink;
       cursor: url("/img/cursor_click.png"), pointer;
       &::before {
         background: url("/img/back_works_hover.svg");
